--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.opencsv:opencsv:4.2'
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    compile 'com.google.guava:guava:23.0'
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+    compile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '3.6.0'
 }
